--- a/Discord.Net.Extensions.Pools/Discord.Net.Extensions.Pools.csproj
+++ b/Discord.Net.Extensions.Pools/Discord.Net.Extensions.Pools.csproj
@@ -10,7 +10,7 @@
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <AssemblyVersion>1.0.0</AssemblyVersion>
         <FileVersion>1.0.0</FileVersion>
-        <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+        <PackageLicenseFile>LICENSE</PackageLicenseFile>
         <Version>1.0.0</Version>
         <Authors>Ficus-x</Authors>
     </PropertyGroup>
