--- a/Discord.Net.Extensions.Pools/Discord.Net.Extensions.Pools.csproj
+++ b/Discord.Net.Extensions.Pools/Discord.Net.Extensions.Pools.csproj
@@ -13,9 +13,14 @@
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
         <Version>1.0.0</Version>
         <Authors>Ficus-x</Authors>
+        <PackageIcon>icon.png</PackageIcon>
     </PropertyGroup>
 
     <ItemGroup>
+        <None Include="..\icon.png">
+          <Pack>True</Pack>
+          <Link>icon.png</Link>
+        </None>
         <None Include="..\LICENSE">
             <Pack>True</Pack>
             <PackagePath>\</PackagePath>
